# FaceAlignmentJNI

./: README.md
faceAlignLib/: CMakeLists.txt  build.sh  facedet.cpp  facedet.hpp  facedet_jni.cpp
faceDetAlignApp/: build.gradle  proguard-rules.pro
faceDetAlignApp/src/androidTest/java/com/rzheng/facedetalignapp/: ApplicationTest.java
faceDetAlignApp/src/main/: AndroidManifest.xml
faceDetAlignApp/src/main/java/com/rzheng/facedetalignapp/: FaceDetAlign.java  MainActivity.java
faceDetAlignApp/src/main/res/layout/: activity_main.xml
faceDetAlignApp/src/main/res/values/: strings.xml  styles.xml
faceDetAlignApp/src/test/java/com/rzheng/facedetalignapp/: ExampleUnitTest.java
faceDetAlignLib/: build.sh  facedet.cpp  facedet.hpp  facedet_jni.cpp
